# 2025H-420-930-MA-SOLID

./: README.md  pyproject.toml
src/solid/: __init__.py  library.py
